--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               <p>
               I am driven by a desire to be a valued asset to my team and I aim to be someone that others can rely on. I bring a solid  foundation   and understanding of core technical skills, strong problem-solving and a positive attitude into the workplace   environment. I am   currently looking for a full-stack role that will allow me to learn and grow as a developer.
               </p>
+              <button class="about_me_more_button">More</button>
             </div>
           </div>
           <div class="about_me_skills">
